// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FbxTextField snapshots renders clear icon 1`] = `
<div class="fbx-text-field"><label class="fbx-text-field__label"></label>
  <div class="fbx-text-field__wrapper">
    <div class="fbx-text-field__input-wrapper"><input type="text" tabindex="0" name="my-input" class="fbx-text-field__input with-clear-icon" data-mask="" data-previous-value="avocado" aria-required="false" aria-invalid="false">
      <!----> <span class="fbx-text-field__clear-icon"></span></div>
    <!---->
  </div>
</div>
`;

exports[`FbxTextField snapshots renders the default 1`] = `
<div class="fbx-text-field"><label class="fbx-text-field__label">Favorite Food</label>
  <div class="fbx-text-field__wrapper">
    <div class="fbx-text-field__input-wrapper"><input type="text" tabindex="0" name="my-input" class="fbx-text-field__input" data-mask="" data-previous-value="avocado" aria-required="false" aria-invalid="false">
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;
